k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-shop-service
  namespace: java-shop
spec:
  selector:
    app: java-shop-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
